Fix: Overflow en buscador
Se ha corregido el overflow en los resultados del buscador

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -275,7 +275,7 @@
     height: 100%;
 }
 
-.titulo-producto-carrito {
+.info-cart-product span, .titulo-producto-carrito {
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
